--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="col-1-of-5">
             <div class="code-box code-box-1">
               <img
-                src="img/Lock.png"
+                src="img/lock.png"
                 class="code-box-1__img"
                 onclick="checkCode1()"
               />
